<resources>
	<string name="app_name">Security</string>
	<string name="not_connected">Waiting for connection</string>
	<string name="bt_txt_alarm_on">Alarm on</string>
	<string name="bt_txt_alarm_off">Alarm off</string>
	<string name="bt_txt_status">Status</string>
	<string name="bt_txt_spMonitor">SolarPV</string>
	<string name="bt_txt_MyAirCon">Aircon</string>
	<string name="bt_txt_registration">Register</string>
	<string name="dot_txt_alarm_status">Alarm status</string>
	<string name="dot_txt_light">Light status</string>
	<string name="dot_txt_alarm">Alarm</string>
	<string name="err_no_esp">No ESP not found. Make sure it is switched on and is connected to the same WiFi network.</string>
	<string name="err_esp">Communication with ESP failed. Make sure it is switched on and is connected to the same WiFi network.</string>
	<string name="err_unknown">Unknown error</string>
	<string name="snd_alarm">Alarm</string>
	<string name="snd_alert">Alert</string>
	<string name="snd_dog">Dog</string>
	<string name="sound_selector_title">Select Alarm sound</string>
	<string name="no_alarm_sel">No Alarm</string>
	<string name="not_home">Not on home WiFi - No status available</string>
	<string name="at_home">On home WiFi - Wait for status</string>
	<string name="udp_listener">Security is listening to ESP8266 device</string>
	<string name="sw_enableAlarm">Enable Alarm Time</string>
	<string name="txt_alarmOn">Alarm on Time</string>
	<string name="txt_alarmOff">Alarm off Time</string>
	<string name="bt_txt_syncDB">Sync remote DB</string>
</resources>
