<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="tk.giesecke.myaircon.myAirCon">

	<item
		android:id="@+id/bt_alarm"
		android:icon="@drawable/ic_alarm_on"
		android:orderInCategory="100"
		android:title="@string/bt_txt_alarm_on"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction"/>

	<item
		android:id="@+id/bt_status"
		android:icon="@drawable/ic_status"
		android:orderInCategory="100"
		android:title="@string/bt_txt_status"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction"/>

	<item
		android:id="@+id/bt_regId"
		android:icon="@drawable/ic_registration"
		android:orderInCategory="100"
		android:title="@string/bt_txt_registration"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction"/>

	<item
		android:id="@+id/bt_selAlarm"
		android:icon="@drawable/ic_settings"
		android:orderInCategory="100"
		android:title="@string/bt_txt_registration"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/bt_switchView"
		android:icon="@drawable/ic_chart"
		android:orderInCategory="100"
		android:title="@string/bt_txt_registration"
		app:showAsAction="never"/>

	<item
		android:id="@+id/bt_clearGraph"
		android:icon="@drawable/ic_erase"
		android:orderInCategory="100"
		android:title="@string/bt_txt_registration"
		app:showAsAction="never"/>

	<item
		android:id="@+id/bt_updateRemoteDB"
		android:icon="@drawable/ic_sync_db"
		android:orderInCategory="100"
		android:title="@string/bt_txt_syncDB"
		app:showAsAction="never"/>

</menu>
